--- a/src/app/components/post/post-view/post-view.component.html
+++ b/src/app/components/post/post-view/post-view.component.html
@@ -1,3 +1,8 @@
-<p>
-  post-view works!
-</p>
+<div class="container">
+  <h1 class="title">{{post.title}}</h1>
+  <div class="subtitle">
+    <span class="author">{{post.authorId}}</span>
+    <span class="category">{{post.category}}</span>
+  </div>
+  <div class="content" [innerHTML]="post.content"></div>
+</div>
