--- a/src/app/components/post/post-form/post-form.component.scss
+++ b/src/app/components/post/post-form/post-form.component.scss
@@ -1,87 +1,20 @@
 .container {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 30px auto 0px;
+    padding: 0px 90px;
+    max-width: 1000px;
 }
 
-.navigation-group {
-    flex-basis: 25%;
-    background-color: rgb(243, 245, 246);
-    padding-left: 24px;
-    padding-top: 16px;
-    padding-bottom: 16px;
-
-    &__item {
-        align-items: center;
-        cursor: pointer;
-    }
-
-    .post-item {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        line-height: 22px;
-        font-family: "Open Sans", sans-serif;
-        font-weight: 500;
-        font-size: 14px;
-        padding: 8px 16px;
-        color: rgb(92, 105, 117);
-        &__content {
-            overflow: hidden;
-        }
-        &.inFocus {
-            background-color: #ffffff;
-            color: rgb(113, 153, 230);
-            border: 1px solid rgb(211, 220, 228);
-            &:hover {
-                background-color: #ffffff;
-            }
-        }
-        &__menu-icon {
-            background-color: inherit;
-            border: none;
-            cursor: pointer;
-            width: 10px;
-            margin-right: 16px;
-            padding-top: 6px;
-            mat-icon {
-                color: rgb(92, 105, 117);
-            }
-        }
-        &:hover {
-            background-color: rgb(220, 226, 237);
-        }
-    }
-    .create-btn {
-        display: block;
-        border: none;
-        width: 100%;
-        padding: 14px 16px;
-        color: rgb(136, 153, 168);
-        line-height: 22px;
-        font-weight: 500;
-        font-size: 14px;
-        font-family: "Open Sans", sans-serif;
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        background-color: inherit;
-        &:hover {
-            background-color: rgb(220, 226, 237);
-        }
-        span {
-            display: inline-block;
-            margin-left: 10px;
-        }
-    }
-}
-
-.form{
+.form {
     font-family: "Segoe", Helvetica, Arial, sans-serif;
 
     &-title {
-        padding: 16px 0px;
         width: 100%;
         &__input {
             display: block;
+            margin-left: -3px;
             width: 100%;
             border: none;
             color: rgb(59, 69, 78);
@@ -99,54 +32,59 @@
         font-weight: 400;
         font-size: 16px;
     }
-    
 }
 
-.btn-group {
-    display: flex;
-    flex-direction: row;
-    &__item {
-        display: block;
-        width: 100%;
-        box-shadow: rgb(0 0 0 / 12%) 0px 1px 2px;
-        margin-bottom: 8px;
-        margin-right: 0px;
-        margin-top: 16px;
-        flex-shrink: 1;
-        flex-grow: 1;
-        flex-basis: 0%;
-        cursor: pointer;
-        background-color: rgb(255, 255, 255);
-        padding: 14px;
-        border-color: rgb(227, 232, 237);
-        border-radius: 4px;
-        border-width: 1px;
-        color: rgb(59, 69, 78);
-        line-height: 24px;
-        font-size: 16px;
-        font-weight: 500;
+.select {
+    border: none;
+    background-color: rgb(45, 50, 58);
+    &-option {
+        color: white;
+        line-height: 20px;
+        font-size: 14px;
         font-family: "Open Sans", sans-serif;
-        position: relative;
-        &:hover {
-            color: rgb(113, 153, 230);
-            border-color: rgb(113, 153, 230);
-        }
+        font-weight: 400;
     }
-    .btn-prev{
-        margin-right: 6px;
+    &:focus{
+        border: none;
+        outline: none;
     }
-    .btn-prev__icon{
-        position:absolute;
-        top:16px;
-        left: 10px;
+}
+
+.btn-group__item {
+    display: block;
+    width: 100%;
+    box-shadow: rgb(0 0 0 / 12%) 0px 1px 2px;
+    margin-top: 16px;
+    cursor: pointer;
+    background-color: rgb(255, 255, 255);
+    padding: 14px;
+    border-color: rgb(227, 232, 237);
+    border-radius: 4px;
+    border-width: 1px;
+    color: rgb(59, 69, 78);
+    line-height: 24px;
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: 8px;
+    font-family: "Open Sans", sans-serif;
+    position: relative;
+    &:hover {
+        color: rgb(113, 153, 230);
+        border-color: rgb(113, 153, 230);
     }
-    .btn-next{
-        margin-left: 6px;
+}
+
+.mat-divider {
+    margin: 10px 0px;
+}
+
+::ng-deep .mat-menu {
+    background-color: rgb(45, 50, 58);
+    .mat-icon {
+        color: rgb(52, 109, 219);
     }
-    .btn-next__icon{
-        position:absolute;
-        top:16px;
-        right: 10px;
+    span {
+        color: white;
     }
 }
 
@@ -166,21 +104,3 @@
 //         outline: none;
 //     }
 // }
-
-.mat-divider {
-    margin: 16px 0px;
-}
-
-.mat-divider__navigation {
-    margin: 10px 0px;
-}
-
-::ng-deep .mat-menu {
-    background-color: rgb(45, 50, 58);
-    .mat-icon {
-        color: rgb(52, 109, 219);
-    }
-    span {
-        color: white;
-    }
-}
