fixed bugs with categories

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-
-<!-- <router-outlet></router-outlet> -->
-<app-user-posts></app-user-posts>
-<!-- <app-categories></app-categories> -->
+<router-outlet></router-outlet>
