create guard, new component, add new method to user service

--- a/src/app/components/login/test/test.component.html
+++ b/src/app/components/login/test/test.component.html
@@ -12,3 +12,7 @@
         <p>{{user.email}}</p>
     </div>
 </div>
+
+<div class="" *ngIf="isSuperAdmin">
+    <p><a routerLink="role" routerLinkActive="active">Role Page</a></p>
+</div>
