create header component, fix  app-routing.ts, fix login and main component, remove fun in auth.service, change fun in user.service

--- a/src/app/components/login/login-form/login-form.component.html
+++ b/src/app/components/login/login-form/login-form.component.html
@@ -36,8 +36,9 @@
             <button class="form__btn" mat-button (click)="logIn()" [disabled]="loginGroup.invalid"
                 type="submit">LOGIN</button>
 
-            <button class="form__btn" routerLink="/" mat-button type="button" (click)="logInAsGuest()">SIGN IN AS A
-                GUEST</button>
+            <button class="form__btn" routerLink="/" mat-button type="button" >
+                <a mat-button routerLink="/" href="#">SIGN IN AS A GUEST</a>
+            </button>
 
             <mat-error *ngIf="isError">{{errorMessage}}</mat-error>
         </form>
