--- a/src/app/components/role/role-page/role-page.component.html
+++ b/src/app/components/role/role-page/role-page.component.html
@@ -44,16 +44,16 @@
     </mat-form-field> -->
     <section class="example-section">
       <mat-checkbox formControlName="create" class="example-margin"
-        >Check me!</mat-checkbox
+        >create</mat-checkbox
       >
       <mat-checkbox formControlName="read" class="example-margin"
-        >Check me!</mat-checkbox
+        >read</mat-checkbox
       >
       <mat-checkbox formControlName="update" class="example-margin"
-        >Check me!</mat-checkbox
+        >update</mat-checkbox
       >
       <mat-checkbox formControlName="remove" class="example-margin"
-        >Check me!</mat-checkbox
+        >remove</mat-checkbox
       >
     </section>
 
