--- a/src/app/components/post/post-form/post-form.component.scss
+++ b/src/app/components/post/post-form/post-form.component.scss
@@ -1,7 +1,6 @@
 .container {
     display: flex;
     flex-direction: column;
-    align-items: center;
     margin: 30px auto 0px;
     padding: 0px 90px;
     max-width: 1000px;
@@ -88,19 +87,15 @@
     }
 }
 
-// .html-header {
-//     margin: 15px 0 5px;
-// }
+::ng-deep {
+    .NgxEditor {
+        min-height: 100px;
+        max-height: 400px;
+        // &__Content{
+        //     background-color: black;
+        //     color: white;
+        // }
+        overflow-y: scroll;
+    }
+}
 
-// .html {
-//     border: 1px solid #ddd;
-//     border-radius: 4px;
-//     padding: 0.5rem;
-//     background-color: #f1f1f1;
-//     min-height: 20px;
-//     max-height: 10rem;
-//     overflow: auto;
-//     &:focus{
-//         outline: none;
-//     }
-// }
