--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,6 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+$white-font: #fff;
+$background: #1f2329;
+$pink-font: #da42b1 #000 #000;
