--- a/src/app/components/post/post-view/post-view.component.scss
+++ b/src/app/components/post/post-view/post-view.component.scss
@@ -5,7 +5,8 @@
 }
 
 .category {
-    color: rgba(117, 117, 117, 1);
+    color: rgb(162, 169, 185);
+    // color: rgba(117, 117, 117, 1);
     line-height: 20px;
     font-size: 14px;
     font-family: "Open Sans", sans-serif;
@@ -14,6 +15,7 @@
 
 .content {
     margin-top: 10px;
+    color: rgb(162, 169, 185);
 }
 
 .title {
@@ -22,11 +24,16 @@
     line-height: 46px;
     margin-top: 0.6em;
     font-size: 40px;
-    color: rgba(41, 41, 41, 1);
+    color: rgb(234, 242, 247);
+    // color: rgba(41, 41, 41, 1);
     margin-bottom: 0.1em;
     font-weight: 700;
     font-style: normal;
     line-height: 1.23;
     letter-spacing: 0;
     font-family: "Open Sans", sans-serif;
+}
+
+a{
+    color: rgb(162, 169, 185);
 }
