--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -27,7 +27,7 @@
                   <div>Category</div>
                 </a>
               </div>
-              <a [routerLink]="['profile']" class="filled-btn-arrow no-margin-top nonauth w-inline-block" *ngIf="isGuest" >
+              <a [routerLink]="['profile_settings']" class="filled-btn-arrow no-margin-top nonauth w-inline-block" *ngIf="isGuest" >
                 <div class="filled-btn-arrow-text" >
                   {{currentUserNme}}
                 </div>
