--- a/src/app/components/users/user-profile/user-profile.component.html
+++ b/src/app/components/users/user-profile/user-profile.component.html
@@ -29,7 +29,7 @@
   </div>
   <p class="title">Password (This password you use for login into this site. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium nam aliquam dignissimos exercitationem, omnis voluptatum quam non molestiae illo beatae earum numquam quidem, corporis adipisci eum! Aperiam nesciunt sed nihil!) </p>
   <div class="edit">
-    <p class="user-info">Here you can</p>
+    <p class="user-info">Pasword</p>
     <button class="outlined-btn">EDIT</button>
   </div>
 </div>
