--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -51,7 +51,7 @@
   </div>
   <div class="section_content">
     <div class="container_main container ">
-      <div class="list_div">
+      <div>
         <div *ngFor="let post of postCategories">
           <ul class="list">
             <li><a
