--- a/src/app/components/add-category/add-category.component.scss
+++ b/src/app/components/add-category/add-category.component.scss
@@ -1,23 +1,64 @@
+.category_list {
+  width: 450px;
+  text-align: center;
+  border-right: 2px solid #da42b1;
+}
+h2 {
+  background-image: url("https://assets-global.website-files.com/600ead1452cf056d0e52dbed/603408f80d379f66929884cf_PurpleBackground%20(1).png");
+  margin-bottom: 24px;
+  background-position: 0 15%;
+  background-size: cover;
+  font-size: 1.5rem;
+  line-height: 1.2em;
+  font-weight: 900;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 .div_body {
   background-color: #1f2329;
-  height: 100%;
+  min-height: 100%;
   padding-top: 48px;
-
+  display: flex;
+}
+.input_sort_category {
+  background-color: floralwhite;
+  border-radius: 10px;
+  padding: 10px;
+  border: 2px solid #da42b1;
 }
 .main_form_div {
   width: 650px;
-  border: 2px solid #7b3fe1;
   max-width: 1328px;
   margin-right: auto;
   margin-left: auto;
-  padding-right: 48px;
-  padding-left: 48px;
-  padding-top: 48px;
-  background-color: whitesmoke;
+  background-color: #1c1e27;
+  min-height: 200px;
+  height: fit-content;
+  padding: 4px;
+  background-position: 0 60%;
+  background-size: auto;
+  -webkit-transition: .2s;
+  transition: .2s;
+  -o-object-fit: fill;
+  object-fit: fill;
+  border: 4px solid;
+  border-image: url("https://assets-global.website-files.com/600ead1452cf056d0e52dbed/603408f80d379f66929884cf_PurpleBackground%20(1).png") 15 round;
+}
+.mat_field {
+  background-color: floralwhite;
+  width: fit-content;
+  height: fit-content;
+  border-radius: 10px;
 }
 form {
+  margin-left: 25px;
+  margin-top: 25px;
   margin-bottom: 25px;
+  max-height: 100%;
 }
+
+
 .button {
   margin-left: 10px;
   font-size: 44px;
@@ -29,5 +70,9 @@ form {
 }
 .sub_button {
   margin-left: 10px;
+}
+
+.hiden {
+  display: none;
 }
 
