--- a/src/app/components/add-category/category-list/category-list.component.html
+++ b/src/app/components/add-category/category-list/category-list.component.html
@@ -1,7 +1,17 @@
-<div>
-  <div>{{category.name}} <button  (click)="editCategory()">edit</button></div>
-  <span *ngIf="category.subCategories" >
-    <div style="padding-left: 20px" *ngFor="let c of category.subCategories">{{c.name}}</div>
-  </span>
+<div class="main_category_list" >
+  <div class="list list_category" > {{category.name}}
+    <button style="background:
+  transparent;
+  border: 0;
+  cursor: pointer"
+            (click)="editCategory()">
+      <mat-icon  color="accent">edit</mat-icon>
+    </button>
+  </div>
+  <div class="subcateg_list" *ngIf="category.subCategories" >
+    <ul  *ngFor="let c of category.subCategories">
+      <li>{{c.name}}</li>
+    </ul>
+  </div>
 </div>
 
