--- a/src/app/components/add-category/edit-category/edit-category.component.html
+++ b/src/app/components/add-category/edit-category/edit-category.component.html
@@ -1,85 +1,35 @@
-
-
-
-
-
-
-
-<div>
-  <form [formGroup]="form">
-      <input  placeholder="category" formControlName="category">
-    <button class="button hover_add" (click)="addSubCategory()" >+</button>
-
-    <span *ngIf="categoryInfo.subCategories">
-      <div formArrayName="subCategories" style="margin-left: 100px">
+<div class="body_edit_categories">
+  <div class="main_form_div">
+    <form [formGroup]="form">
+      <mat-form-field class="mat_field" hintLabel="Min 3 characters, Max 20" appearance="fill"
+                      style="margin-bottom: 20px">
+        <mat-label>Enter category</mat-label>
+        <input matInput #inputCategory [placeholder]="'category'" formControlName="category">
+        <mat-hint align="end">{{inputCategory.value?.length || 0}}/20</mat-hint>
+      </mat-form-field>
+      <button class="button " (click)="addSubCategory()">+</button>
+      <span *ngIf="categoryInfo.subCategories">
+      <div formArrayName="subCategories" style="margin-left: 100px; margin-top: 24px">
         <div *ngFor="let subCategory of subCategoriesFormArray.controls let i = index">
-                    <label>subcategory {{i + 1}}
-                      <input
-                              [formControlName]="i"><button (click)="removeSubCategories(i)">x</button>
-                    </label>
+          <mat-form-field class="mat_field" hintLabel="Min 3 characters, Max 20" appearance="fill"
+                          style="margin-bottom: 20px">
+            <mat-label>Enter sub-category</mat-label>
+            <input matInput #inputSubcategory [placeholder]="'sub-category ' + (i + 1)" [formControlName]="i">
+                      <mat-hint align="end">{{inputSubcategory.value?.length || 0}}/20</mat-hint>
+          </mat-form-field>
+             <button style="margin-left: 10px" mat-button color="warn" (click)="removeSubCategories(i)">Remove</button>
         </div>
       </div>
     </span>
-    <button mat-flat-button color="primary" (click)="updateCategory()">Update
-    </button>
-    <button mat-flat-button color="primary" [routerLink]="'/add-category'"
-            (click)="deleteCategory(categoryInfo.id)">Delete Category
-    </button>
-  </form>
+      <div style="margin-left: 10px">
+        <button mat-flat-button color="accent" [disabled]="form.invalid" (click)="updateCategory()" style="margin-right: 15px">Update
+        </button>
+        <button [routerLink]="'/add-category'"
+                mat-flat-button color="warn"
+                (click)="deleteCategory(categoryInfo.id)">Delete Category
+        </button>
+      </div>
+    </form>
+    <button mat-flat-button color="primary" [routerLink]="'/add-category'">Cancel</button>
+  </div>
 </div>
-
-
-
-
-<!--<div>-->
-<!--  <form #myForm (ngSubmit)="updateCategory(myForm.value)">-->
-<!--    <input #categoryName='ngModel' type="text" name="category" ngModel-->
-<!--           placeholder="categoryName"-->
-<!--           [(ngModel)]="categoryInfo.name"-->
-<!--    >-->
-<!--    <button type="button" [routerLink]="['/add-category']" (click)="deleteCategory(categoryInfo.id)">Delete</button>-->
-
-<!--    <span *ngIf="categoryInfo.subCategories">-->
-<!-- <div *ngFor="let c of categoryInfo.subCategories; let i = index">-->
-
-<!--   <label> subcategory {{i + 1}}-->
-<!--     <input  type="text"-->
-
-<!--            name="subcategory"-->
-<!--            placeholder="subcategoryName"-->
-<!--            [value]="c.name"-->
-<!--            >-->
-
-<!--  </label>-->
-<!--   </div>-->
-<!--   </span>-->
-<!--    <button type="submit">update</button>-->
-<!--  </form>-->
-<!--</div>-->
-<!--<button mat-flat-button color="accent" [routerLink]="'/add-category'">Back</button>-->
-
-
-<!--<div>-->
-<!--  <form #myForm (ngSubmit)="updateCategory(myForm)">-->
-<!--    <input  type="text" name="category"-->
-<!--           placeholder="categoryName"-->
-<!--           value="{{categoryInfo.name}}"-->
-<!--           >-->
-<!--    <button type="button" [routerLink]="['/add-category']" (click)="deleteCategory(categoryInfo.id)">Delete</button>-->
-
-<!--    <span *ngIf="categoryInfo.subCategories">-->
-<!--    <div *ngFor="let c of categoryInfo.subCategories; let i = index">-->
-
-<!--      <label> subcategory {{i + 1}}<input type="text"-->
-<!--                                          name="subcategory"-->
-<!--                                          placeholder="subcategoryName"-->
-<!--                                          value="{{c.name}}"-->
-<!--                                          > &lt;!&ndash;[(ngModel)]="category.subCategories[i]"&ndash;&gt;-->
-<!--      </label>-->
-<!--    </div>-->
-<!--</span>-->
-<!--    <button type="submit" (click)="submit(myForm)">update</button>-->
-<!--  </form>-->
-<!--</div>-->
-<!--<button mat-flat-button color="accent" [routerLink]="'/add-category'">Back</button>-->
-
