--- a/src/app/components/post/post-dialogs/warning-dialog/warning-dialog.component.scss
+++ b/src/app/components/post/post-dialogs/warning-dialog/warning-dialog.component.scss
@@ -1,6 +1,5 @@
 .container {
     cursor: default;
-    background-color: rgb(255, 255, 255);
     border-radius: 8px;
     width: 420px;
     max-height: 577px;
@@ -13,7 +12,6 @@
     line-height: 36px;
     font-weight: 700;
     font-size: 24px;
-    color: rgb(59, 69, 78);
     font-family: "Segoe", Helvetica, Arial, sans-serif;
 }
 
@@ -46,14 +44,14 @@
     }
     &__cancel {
         margin-right: 8px;
-        color: rgb(69, 69, 69);
-        box-shadow: rgb(227 232 237) 0px 0px 0px 1px inset;
-        background-color: rgb(255, 255, 255);
+        color: rgb(250, 250, 250);
+        box-shadow: rgb(82 88 95) 0px 0px 0px 1px inset;
+        background-color: rgb(54, 60, 65);
         border-radius: 4px;
         border-width: 1px;
         border-color: rgba(0, 0, 0, 0);
         &:hover{
-            background-color: rgb(221, 212, 212);
+            background-color: rgb(82 88 95);
         }
     }
     &__continue {
@@ -69,11 +67,17 @@
 }
 
 .message {
-    color: rgb(59, 69, 78);
     line-height: 24px;
     font-weight: 400;
     font-size: 16px;
     font-family: "Segoe", Helvetica, Arial, sans-serif;
     font: inherit;
     white-space: inherit;
+}
+
+::ng-deep{
+    .mat-dialog-container{
+        background-color: #181c1f;
+        color: rgb(234, 242, 247);
+    }
 }
