--- a/src/app/components/role/role-page/role-page.component.scss
+++ b/src/app/components/role/role-page/role-page.component.scss
@@ -4,8 +4,13 @@
   flex-wrap: wrap;
 }
 
+.check-box__group {
+  display: flex;
+  flex-direction: column;
+}
+
 .user {
-  height: 400px;
+  height: auto;
   width: auto;
 }
 
@@ -16,5 +21,5 @@
 }
 
 .role__form__btn {
-    margin: 20px 0px;
+  margin: 20px 0px;
 }
