implemented reset password

--- a/src/app/components/login/login-form/login-form.component.html
+++ b/src/app/components/login/login-form/login-form.component.html
@@ -30,13 +30,15 @@
 
             </mat-form-field>
 
-
+            <div class="form__link reset">
+                <a href="#" routerLink="/reset-password">Forgot password?</a>
+            </div>
 
 
             <button class="form__btn" mat-button (click)="logIn()" [disabled]="loginGroup.invalid"
                 type="submit">LOGIN</button>
 
-            <button class="form__btn" routerLink="/" mat-button type="button" (click)="logInAsGuest()">SIGN IN AS A
+            <button class="form__btn" routerLink="/" mat-button type="button">SIGN IN AS A
                 GUEST</button>
 
             <mat-error *ngIf="isError">{{errorMessage}}</mat-error>
