--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -20,7 +20,7 @@
       <div class="posts-container">
         <div class="main-posts">
             <div *ngFor="let post of allPosts" class="example">
-              <mat-card class="example-card">
+              <mat-card class="example-card" [routerLink]="['/post', post.id]">
                 <mat-card-title-group style="flex-direction: column">
                   <mat-card-title>{{post.title}}
                     <div style="float: right" *ngIf="!hidenButton">
