--- a/src/app/components/post/views/post-view-main/post-view.component.scss
+++ b/src/app/components/post/views/post-view-main/post-view.component.scss
@@ -1,12 +1,17 @@
 .container {
-    padding: 0px 90px;
-    max-width: 1000px;
-    margin: 16px auto;
+    background-color: #181c1f;
+    width: 100%;
+    height: 100%;
+}
+
+.post{
+    padding: 16px 90px;
+    max-width: 800px;
+    margin: 0px auto;
 }
 
 .category {
     color: rgb(162, 169, 185);
-    // color: rgba(117, 117, 117, 1);
     line-height: 20px;
     font-size: 14px;
     font-family: "Open Sans", sans-serif;
